@@ -5,8 +5,10 @@ xine-lib (1-rc6)
     might lead to undefined behaviour; calling XInitThreads() is entirely
     the frontend's job
   * include goom2k4-dev15
+  * make sure the streams are played till their very end
   * support for Annodex files
-
+  * VobSub-in-Matroska support
+  
 xine-lib (1-rc5)  
   * add support for ejecting removable media on Solaris
   * fix stuttering playback of some realmedia streams
